Added code to drive multiple set of data from excel for Login functionality and screenshot method

--- a/LiveProject/test-output/old/Default suite/classes.html
+++ b/LiveProject/test-output/old/Default suite/classes.html
@@ -11,11 +11,11 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>LogoTest</td>
+<td>LogoPageloginTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>sample</td>
+<td>LogoPagelogoTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
