--- a/LiveProject/test-output/old/Suite/methods-alphabetical.html
+++ b/LiveProject/test-output/old/Suite/methods-alphabetical.html
@@ -1,20 +1,26 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9898eb">  <td>22/01/21 15:15:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPageloginTest(java.lang.String,java.lang.String)[pri:1, instance:com.livetest.LoginPageTest@150efb8]">LogoPageloginTest</td> 
-  <td>main@24264240</td>   <td></td> </tr>
-<tr bgcolor="9898eb">  <td>22/01/21 15:15:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPageloginTest(java.lang.String,java.lang.String)[pri:1, instance:com.livetest.LoginPageTest@150efb8]">LogoPageloginTest</td> 
-  <td>main@24264240</td>   <td></td> </tr>
-<tr bgcolor="9898eb">  <td>22/01/21 15:15:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPageloginTest(java.lang.String,java.lang.String)[pri:1, instance:com.livetest.LoginPageTest@150efb8]">LogoPageloginTest</td> 
-  <td>main@24264240</td>   <td></td> </tr>
-<tr bgcolor="9898eb">  <td>22/01/21 15:15:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPageloginTest(java.lang.String,java.lang.String)[pri:1, instance:com.livetest.LoginPageTest@150efb8]">LogoPageloginTest</td> 
-  <td>main@24264240</td>   <td></td> </tr>
-<tr bgcolor="9898eb">  <td>22/01/21 15:15:20</td>   <td>-15525</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPagelogoTest()[pri:0, instance:com.livetest.LoginPageTest@150efb8]">LogoPagelogoTest</td> 
-  <td>main@24264240</td>   <td></td> </tr>
-<tr bgcolor="70b3e1">  <td>22/01/21 15:15:20</td>   <td>-15636</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.sample()[pri:0, instance:com.livetest.HomePageTest@1579e0f]">sample</td> 
-  <td>main@24264240</td>   <td></td> </tr>
-<tr bgcolor="9898eb">  <td>22/01/21 15:15:06</td>   <td>-29344</td> <td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setup()[pri:0, instance:com.livetest.LoginPageTest@150efb8]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@24264240</td>   <td></td> </tr>
-<tr bgcolor="9898eb">  <td>22/01/21 15:15:48</td>   <td>12569</td> <td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.livetest.LoginPageTest@150efb8]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@24264240</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>22/01/21 23:07:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPageloginTest(java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:com.livetest.LoginPageTest@43cd28]">LogoPageloginTest</td> 
+  <td>main@22069592</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>22/01/21 23:07:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPageloginTest(java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:com.livetest.LoginPageTest@43cd28]">LogoPageloginTest</td> 
+  <td>main@22069592</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>22/01/21 23:07:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPageloginTest(java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:com.livetest.LoginPageTest@43cd28]">LogoPageloginTest</td> 
+  <td>main@22069592</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>22/01/21 23:07:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPageloginTest(java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:com.livetest.LoginPageTest@43cd28]">LogoPageloginTest</td> 
+  <td>main@22069592</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>22/01/21 23:07:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPageloginTest(java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:com.livetest.LoginPageTest@43cd28]">LogoPageloginTest</td> 
+  <td>main@22069592</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>22/01/21 23:07:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPageloginTest(java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:com.livetest.LoginPageTest@43cd28]">LogoPageloginTest</td> 
+  <td>main@22069592</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>22/01/21 23:07:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPageloginTest(java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:com.livetest.LoginPageTest@43cd28]">LogoPageloginTest</td> 
+  <td>main@22069592</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>22/01/21 23:06:36</td>   <td>-44648</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPagelogoTest()[pri:0, instance:com.livetest.LoginPageTest@43cd28]">LogoPagelogoTest</td> 
+  <td>main@22069592</td>   <td></td> </tr>
+<tr bgcolor="9286a3">  <td>22/01/21 23:06:36</td>   <td>-44701</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.sample()[pri:3, instance:com.livetest.HomePageTest@9a3d1d]">sample</td> 
+  <td>main@22069592</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>22/01/21 23:06:20</td>   <td>-60466</td> <td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setup()[pri:0, instance:com.livetest.LoginPageTest@43cd28]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@22069592</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>22/01/21 23:07:32</td>   <td>10959</td> <td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.livetest.LoginPageTest@43cd28]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@22069592</td>   <td></td> </tr>
 </table>
