--- a/LiveProject/test-output/old/Default suite/methods-alphabetical.html
+++ b/LiveProject/test-output/old/Default suite/methods-alphabetical.html
@@ -1,24 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ec7f6c">  <td>22/01/21 23:42:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPageloginTest(java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:com.livetest.LoginPageTest@9273a8]">LogoPageloginTest</td> 
-  <td>main@7784653</td>   <td></td> </tr>
-<tr bgcolor="ec7f6c">  <td>22/01/21 23:42:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPageloginTest(java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:com.livetest.LoginPageTest@9273a8]">LogoPageloginTest</td> 
-  <td>main@7784653</td>   <td></td> </tr>
-<tr bgcolor="ec7f6c">  <td>22/01/21 23:42:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPageloginTest(java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:com.livetest.LoginPageTest@9273a8]">LogoPageloginTest</td> 
-  <td>main@7784653</td>   <td></td> </tr>
-<tr bgcolor="ec7f6c">  <td>22/01/21 23:42:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPageloginTest(java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:com.livetest.LoginPageTest@9273a8]">LogoPageloginTest</td> 
-  <td>main@7784653</td>   <td></td> </tr>
-<tr bgcolor="ec7f6c">  <td>22/01/21 23:42:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPageloginTest(java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:com.livetest.LoginPageTest@9273a8]">LogoPageloginTest</td> 
-  <td>main@7784653</td>   <td></td> </tr>
-<tr bgcolor="ec7f6c">  <td>22/01/21 23:42:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPageloginTest(java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:com.livetest.LoginPageTest@9273a8]">LogoPageloginTest</td> 
-  <td>main@7784653</td>   <td></td> </tr>
-<tr bgcolor="ec7f6c">  <td>22/01/21 23:42:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPageloginTest(java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:com.livetest.LoginPageTest@9273a8]">LogoPageloginTest</td> 
-  <td>main@7784653</td>   <td></td> </tr>
-<tr bgcolor="ec7f6c">  <td>22/01/21 23:41:41</td>   <td>-46155</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPagelogoTest()[pri:0, instance:com.livetest.LoginPageTest@9273a8]">LogoPagelogoTest</td> 
-  <td>main@7784653</td>   <td></td> </tr>
-<tr bgcolor="ec7f6c">  <td>22/01/21 23:41:23</td>   <td>-64550</td> <td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setup()[pri:0, instance:com.livetest.LoginPageTest@9273a8]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@7784653</td>   <td></td> </tr>
-<tr bgcolor="ec7f6c">  <td>22/01/21 23:42:39</td>   <td>11145</td> <td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.livetest.LoginPageTest@9273a8]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@7784653</td>   <td></td> </tr>
+<tr bgcolor="8080bb">  <td>22/01/22 15:21:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPagelogoTest()[pri:0, instance:com.livetest.LoginPageTest@1906517]">LogoPagelogoTest</td> 
+  <td>main@6948014</td>   <td></td> </tr>
+<tr bgcolor="8080bb">  <td>22/01/22 15:21:11</td>   <td>890</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.repeat(org.testng.ITestResult)[pri:0, instance:com.livetest.LoginPageTest@1906517]">&lt;&lt;repeat</td> 
+<td>&nbsp;</td>  <td>main@6948014</td>   <td></td> </tr>
+<tr bgcolor="8080bb">  <td>22/01/22 15:20:46</td>   <td>-23714</td> <td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setup()[pri:0, instance:com.livetest.LoginPageTest@1906517]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@6948014</td>   <td></td> </tr>
+<tr bgcolor="8080bb">  <td>22/01/22 15:21:11</td>   <td>917</td> <td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.livetest.LoginPageTest@1906517]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@6948014</td>   <td></td> </tr>
 </table>
