--- a/LiveProject/test-output/old/Suite/methods.html
+++ b/LiveProject/test-output/old/Suite/methods.html
@@ -1,26 +1,26 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="85a98f">  <td>22/01/21 23:07:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPageloginTest(java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:com.livetest.LoginPageTest@43cd28]">LogoPageloginTest</td> 
-  <td>main@22069592</td>   <td></td> </tr>
-<tr bgcolor="85a98f">  <td>22/01/21 23:07:32</td>   <td>10959</td> <td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.livetest.LoginPageTest@43cd28]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@22069592</td>   <td></td> </tr>
-<tr bgcolor="85a98f">  <td>22/01/21 23:07:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPageloginTest(java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:com.livetest.LoginPageTest@43cd28]">LogoPageloginTest</td> 
-  <td>main@22069592</td>   <td></td> </tr>
-<tr bgcolor="85a98f">  <td>22/01/21 23:07:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPageloginTest(java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:com.livetest.LoginPageTest@43cd28]">LogoPageloginTest</td> 
-  <td>main@22069592</td>   <td></td> </tr>
-<tr bgcolor="85a98f">  <td>22/01/21 23:07:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPageloginTest(java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:com.livetest.LoginPageTest@43cd28]">LogoPageloginTest</td> 
-  <td>main@22069592</td>   <td></td> </tr>
-<tr bgcolor="85a98f">  <td>22/01/21 23:07:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPageloginTest(java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:com.livetest.LoginPageTest@43cd28]">LogoPageloginTest</td> 
-  <td>main@22069592</td>   <td></td> </tr>
-<tr bgcolor="85a98f">  <td>22/01/21 23:06:20</td>   <td>-60466</td> <td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setup()[pri:0, instance:com.livetest.LoginPageTest@43cd28]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@22069592</td>   <td></td> </tr>
-<tr bgcolor="85a98f">  <td>22/01/21 23:07:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPageloginTest(java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:com.livetest.LoginPageTest@43cd28]">LogoPageloginTest</td> 
-  <td>main@22069592</td>   <td></td> </tr>
-<tr bgcolor="9286a3">  <td>22/01/21 23:06:36</td>   <td>-44701</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.sample()[pri:3, instance:com.livetest.HomePageTest@9a3d1d]">sample</td> 
-  <td>main@22069592</td>   <td></td> </tr>
-<tr bgcolor="85a98f">  <td>22/01/21 23:06:36</td>   <td>-44648</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPagelogoTest()[pri:0, instance:com.livetest.LoginPageTest@43cd28]">LogoPagelogoTest</td> 
-  <td>main@22069592</td>   <td></td> </tr>
-<tr bgcolor="85a98f">  <td>22/01/21 23:07:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPageloginTest(java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:com.livetest.LoginPageTest@43cd28]">LogoPageloginTest</td> 
-  <td>main@22069592</td>   <td></td> </tr>
+<tr bgcolor="b264a1">  <td>22/01/22 21:13:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPageloginTest(java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:com.livetest.LoginPageTest@1bf57b3]">LogoPageloginTest</td> 
+  <td>TestNG-test=Test-1@9852538</td>   <td></td> </tr>
+<tr bgcolor="b264a1">  <td>22/01/22 21:11:59</td>   <td>-78856</td> <td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setup()[pri:0, instance:com.livetest.LoginPageTest@1bf57b3]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@17740980</td>   <td></td> </tr>
+<tr bgcolor="ac878f">  <td>22/01/22 21:12:27</td>   <td>-50878</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.sample()[pri:3, instance:com.livetest.HomePageTest@d7259e]">sample</td> 
+  <td>TestNG-test=Test-2@1555629</td>   <td></td> </tr>
+<tr bgcolor="b264a1">  <td>22/01/22 21:13:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPageloginTest(java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:com.livetest.LoginPageTest@1bf57b3]">LogoPageloginTest</td> 
+  <td>TestNG-test=Test-1@9852538</td>   <td></td> </tr>
+<tr bgcolor="b264a1">  <td>22/01/22 21:13:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPageloginTest(java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:com.livetest.LoginPageTest@1bf57b3]">LogoPageloginTest</td> 
+  <td>TestNG-test=Test-1@9852538</td>   <td></td> </tr>
+<tr bgcolor="b264a1">  <td>22/01/22 21:13:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPageloginTest(java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:com.livetest.LoginPageTest@1bf57b3]">LogoPageloginTest</td> 
+  <td>TestNG-test=Test-1@9852538</td>   <td></td> </tr>
+<tr bgcolor="b264a1">  <td>22/01/22 21:12:27</td>   <td>-50877</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPagelogoTest()[pri:0, instance:com.livetest.LoginPageTest@1bf57b3]">LogoPagelogoTest</td> 
+  <td>TestNG-test=Test-1@9852538</td>   <td></td> </tr>
+<tr bgcolor="b264a1">  <td>22/01/22 21:13:28</td>   <td>10591</td> <td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.livetest.LoginPageTest@1bf57b3]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@17740980</td>   <td></td> </tr>
+<tr bgcolor="b264a1">  <td>22/01/22 21:13:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPageloginTest(java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:com.livetest.LoginPageTest@1bf57b3]">LogoPageloginTest</td> 
+  <td>TestNG-test=Test-1@9852538</td>   <td></td> </tr>
+<tr bgcolor="b264a1">  <td>22/01/22 21:13:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPageloginTest(java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:com.livetest.LoginPageTest@1bf57b3]">LogoPageloginTest</td> 
+  <td>TestNG-test=Test-1@9852538</td>   <td></td> </tr>
+<tr bgcolor="b264a1">  <td>22/01/22 21:13:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPageloginTest(java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:com.livetest.LoginPageTest@1bf57b3]">LogoPageloginTest</td> 
+  <td>TestNG-test=Test-1@9852538</td>   <td></td> </tr>
 </table>
