Added few code changes

--- a/LiveProject/test-output/index.html
+++ b/LiveProject/test-output/index.html
@@ -26,7 +26,7 @@
       <span class="top-banner-title-font">Test results</span>
       <button class="button" id="button">Switch Retro Theme</button> <!-- button -->
       <br/>
-      <span class="top-banner-font-1">1 suite, 2 failed tests</span>
+      <span class="top-banner-font-1">1 suite, 1 failed test</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">9 methods, 2 failed,   7 passed</span>
+                    <span class="method-stats">9 methods, 1 failed,   8 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title failed">Failed methods</span>
@@ -102,11 +102,6 @@
                       <a href="#" panel-name="suite-Suite" class="show-methods failed suite-Suite"> (show)</a> <!-- show-methods failed suite-Suite -->
                     </span>
                     <div class="method-list-content failed suite-Suite">
-                      <span>
-                        <img width="3%" src="failed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.livetest.LoginPageTest" hash-for-method="LogoPageloginTest(mngr381722, UmYgepY, Both correct)">LogoPageloginTest(mngr381722, UmYgepY, Both correct)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
                       <span>
                         <img width="3%" src="failed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.livetest.LoginPageTest" hash-for-method="LogoPagelogoTest">LogoPagelogoTest</a> <!-- method navigator-link -->
@@ -123,12 +118,12 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.livetest.LoginPageTest" hash-for-method="LogoPageloginTest( , UmYgepY, Username blank)">LogoPageloginTest( , UmYgepY, Username blank)</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.livetest.LoginPageTest" hash-for-method="LogoPageloginTest(btnLogin, UmYgepY, Passwordcorrect)">LogoPageloginTest(btnLogin, UmYgepY, Passwordcorrect)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.livetest.LoginPageTest" hash-for-method="LogoPageloginTest(btnLogin, btnLogin, Both wrong)">LogoPageloginTest(btnLogin, btnLogin, Both wrong)</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.livetest.LoginPageTest" hash-for-method="LogoPageloginTest(mngr381722, btnLogin, Usernamecorrect)">LogoPageloginTest(mngr381722, btnLogin, Usernamecorrect)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -138,7 +133,12 @@
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.livetest.LoginPageTest" hash-for-method="LogoPageloginTest(btnLogin, UmYgepY, Passwordcorrect)">LogoPageloginTest(btnLogin, UmYgepY, Passwordcorrect)</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.livetest.LoginPageTest" hash-for-method="LogoPageloginTest(mngr381722, UmYgepY, Both correct)">LogoPageloginTest(mngr381722, UmYgepY, Both correct)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.livetest.LoginPageTest" hash-for-method="LogoPageloginTest( , UmYgepY, Username blank)">LogoPageloginTest( , UmYgepY, Username blank)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -148,7 +148,7 @@
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.livetest.LoginPageTest" hash-for-method="LogoPageloginTest(mngr381722, btnLogin, Usernamecorrect)">LogoPageloginTest(mngr381722, btnLogin, Usernamecorrect)</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.livetest.LoginPageTest" hash-for-method="LogoPageloginTest(btnLogin, btnLogin, Both wrong)">LogoPageloginTest(btnLogin, btnLogin, Both wrong)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -174,21 +174,6 @@
               <span class="class-name">com.livetest.LoginPageTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="LogoPageloginTest(mngr381722, UmYgepY, Both correct)">
-                  </a> <!-- LogoPageloginTest(mngr381722, UmYgepY, Both correct) -->
-                  <span class="method-name">LogoPageloginTest</span>
-                  <span class="parameters">(mngr381722, UmYgepY, Both correct)</span>
-                  <div class="stack-trace">java.lang.AssertionError: did not expect [Guru99 Bank Manager HomePage] but found [Guru99 Bank Manager HomePage]
-	at com.livetest.LoginPageTest.LogoPageloginTest(LoginPageTest.java:72)
-	at java.util.concurrent.ThreadPoolExecutor.runWorker(Unknown Source)
-	at java.util.concurrent.ThreadPoolExecutor$Worker.run(Unknown Source)
-	at java.lang.Thread.run(Unknown Source)
-... Removed 17 stack frames
-</div> <!-- stack-trace -->
-                </div> <!-- method-content -->
-              </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
                   <a name="LogoPagelogoTest">
@@ -228,18 +213,18 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="LogoPageloginTest( , UmYgepY, Username blank)">
-                  </a> <!-- LogoPageloginTest( , UmYgepY, Username blank) -->
+                  <a name="LogoPageloginTest(btnLogin, UmYgepY, Passwordcorrect)">
+                  </a> <!-- LogoPageloginTest(btnLogin, UmYgepY, Passwordcorrect) -->
                   <span class="method-name">LogoPageloginTest</span>
-                  <span class="parameters">( , UmYgepY, Username blank)</span>
+                  <span class="parameters">(btnLogin, UmYgepY, Passwordcorrect)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="LogoPageloginTest(btnLogin, btnLogin, Both wrong)">
-                  </a> <!-- LogoPageloginTest(btnLogin, btnLogin, Both wrong) -->
+                  <a name="LogoPageloginTest(mngr381722, btnLogin, Usernamecorrect)">
+                  </a> <!-- LogoPageloginTest(mngr381722, btnLogin, Usernamecorrect) -->
                   <span class="method-name">LogoPageloginTest</span>
-                  <span class="parameters">(btnLogin, btnLogin, Both wrong)</span>
+                  <span class="parameters">(mngr381722, btnLogin, Usernamecorrect)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -252,10 +237,18 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="LogoPageloginTest(btnLogin, UmYgepY, Passwordcorrect)">
-                  </a> <!-- LogoPageloginTest(btnLogin, UmYgepY, Passwordcorrect) -->
+                  <a name="LogoPageloginTest(mngr381722, UmYgepY, Both correct)">
+                  </a> <!-- LogoPageloginTest(mngr381722, UmYgepY, Both correct) -->
                   <span class="method-name">LogoPageloginTest</span>
-                  <span class="parameters">(btnLogin, UmYgepY, Passwordcorrect)</span>
+                  <span class="parameters">(mngr381722, UmYgepY, Both correct)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="LogoPageloginTest( , UmYgepY, Username blank)">
+                  </a> <!-- LogoPageloginTest( , UmYgepY, Username blank) -->
+                  <span class="method-name">LogoPageloginTest</span>
+                  <span class="parameters">( , UmYgepY, Username blank)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -268,10 +261,10 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="LogoPageloginTest(mngr381722, btnLogin, Usernamecorrect)">
-                  </a> <!-- LogoPageloginTest(mngr381722, btnLogin, Usernamecorrect) -->
+                  <a name="LogoPageloginTest(btnLogin, btnLogin, Both wrong)">
+                  </a> <!-- LogoPageloginTest(btnLogin, btnLogin, Both wrong) -->
                   <span class="method-name">LogoPageloginTest</span>
-                  <span class="parameters">(mngr381722, btnLogin, Usernamecorrect)</span>
+                  <span class="parameters">(btnLogin, btnLogin, Both wrong)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -339,44 +332,44 @@ data.addRows(9);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'LogoPageloginTest')
 data.setCell(0, 2, 'com.livetest.LoginPageTest')
-data.setCell(0, 3, 10216);
+data.setCell(0, 3, 11992);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'LogoPageloginTest')
 data.setCell(1, 2, 'com.livetest.LoginPageTest')
-data.setCell(1, 3, 8892);
+data.setCell(1, 3, 9021);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'LogoPageloginTest')
 data.setCell(2, 2, 'com.livetest.LoginPageTest')
-data.setCell(2, 3, 7390);
+data.setCell(2, 3, 5373);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'LogoPageloginTest')
 data.setCell(3, 2, 'com.livetest.LoginPageTest')
-data.setCell(3, 3, 7261);
+data.setCell(3, 3, 5350);
 data.setCell(4, 0, 4)
 data.setCell(4, 1, 'LogoPageloginTest')
 data.setCell(4, 2, 'com.livetest.LoginPageTest')
-data.setCell(4, 3, 6146);
+data.setCell(4, 3, 5267);
 data.setCell(5, 0, 5)
 data.setCell(5, 1, 'LogoPageloginTest')
 data.setCell(5, 2, 'com.livetest.LoginPageTest')
-data.setCell(5, 3, 5106);
+data.setCell(5, 3, 5076);
 data.setCell(6, 0, 6)
 data.setCell(6, 1, 'LogoPageloginTest')
 data.setCell(6, 2, 'com.livetest.LoginPageTest')
-data.setCell(6, 3, 5052);
+data.setCell(6, 3, 4691);
 data.setCell(7, 0, 7)
 data.setCell(7, 1, 'LogoPagelogoTest')
 data.setCell(7, 2, 'com.livetest.LoginPageTest')
-data.setCell(7, 3, 1975);
+data.setCell(7, 3, 1655);
 data.setCell(8, 0, 8)
 data.setCell(8, 1, 'sample')
 data.setCell(8, 2, 'com.livetest.HomePageTest')
-data.setCell(8, 3, 192);
+data.setCell(8, 3, 317);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 52 seconds</span>
+              <span class="suite-total-time">Total running time: 48 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -407,55 +400,53 @@ return data;
                 <span class="method-name">setup</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
+              <div class="test-method">
+                <img src="failed.png">
+                </img>
+                <span class="method-name">LogoPagelogoTest</span>
+                <span class="method-start">35413 ms</span>
+              </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.livetest.HomePageTest</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">sample</span>
-                <span class="method-start">27991 ms</span>
+                <span class="method-start">35413 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.livetest.LoginPageTest</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <img src="failed.png">
-                </img>
-                <span class="method-name">LogoPagelogoTest</span>
-                <span class="method-start">27992 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
                 <span class="method-name">LogoPageloginTest(btnLogin, UmYgepY, Passwordcorrect)</span>
-                <span class="method-start">39002 ms</span>
+                <span class="method-start">45838 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">LogoPageloginTest(mngr381722, btnLogin, Usernamecorrect)</span>
-                <span class="method-start">47899 ms</span>
+                <span class="method-start">54863 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">LogoPageloginTest(btnLogin, btnLogin, Both wrong)</span>
-                <span class="method-start">55163 ms</span>
+                <span class="method-start">59942 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">LogoPageloginTest(mngr381722,  , Password blank)</span>
-                <span class="method-start">62556 ms</span>
+                <span class="method-start">65294 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">LogoPageloginTest( , UmYgepY, Username blank)</span>
-                <span class="method-start">67666 ms</span>
+                <span class="method-start">70566 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">LogoPageloginTest( ,  , Both blank)</span>
-                <span class="method-start">72721 ms</span>
+                <span class="method-start">75259 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <img src="failed.png">
-                </img>
                 <span class="method-name">LogoPageloginTest(mngr381722, UmYgepY, Both correct)</span>
-                <span class="method-start">78869 ms</span>
+                <span class="method-start">80635 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">89459 ms</span>
+                <span class="method-start">92634 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
