--- a/LiveProject/test-output/old/Suite/methods-alphabetical.html
+++ b/LiveProject/test-output/old/Suite/methods-alphabetical.html
@@ -1,26 +1,58 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b264a1">  <td>22/01/22 22:32:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPageloginTest(java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:com.livetest.LoginPageTest@1bf57b3]">LogoPageloginTest</td> 
-  <td>TestNG-test=Test-1@21113744</td>   <td></td> </tr>
-<tr bgcolor="b264a1">  <td>22/01/22 22:32:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPageloginTest(java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:com.livetest.LoginPageTest@1bf57b3]">LogoPageloginTest</td> 
-  <td>TestNG-test=Test-1@21113744</td>   <td></td> </tr>
-<tr bgcolor="b264a1">  <td>22/01/22 22:32:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPageloginTest(java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:com.livetest.LoginPageTest@1bf57b3]">LogoPageloginTest</td> 
-  <td>TestNG-test=Test-1@21113744</td>   <td></td> </tr>
-<tr bgcolor="b264a1">  <td>22/01/22 22:32:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPageloginTest(java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:com.livetest.LoginPageTest@1bf57b3]">LogoPageloginTest</td> 
-  <td>TestNG-test=Test-1@21113744</td>   <td></td> </tr>
-<tr bgcolor="b264a1">  <td>22/01/22 22:32:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPageloginTest(java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:com.livetest.LoginPageTest@1bf57b3]">LogoPageloginTest</td> 
-  <td>TestNG-test=Test-1@21113744</td>   <td></td> </tr>
-<tr bgcolor="b264a1">  <td>22/01/22 22:32:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPageloginTest(java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:com.livetest.LoginPageTest@1bf57b3]">LogoPageloginTest</td> 
-  <td>TestNG-test=Test-1@21113744</td>   <td></td> </tr>
-<tr bgcolor="b264a1">  <td>22/01/22 22:32:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPageloginTest(java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:com.livetest.LoginPageTest@1bf57b3]">LogoPageloginTest</td> 
-  <td>TestNG-test=Test-1@21113744</td>   <td></td> </tr>
-<tr bgcolor="b264a1">  <td>22/01/22 22:31:47</td>   <td>-45222</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPagelogoTest()[pri:0, instance:com.livetest.LoginPageTest@1bf57b3]">LogoPagelogoTest</td> 
-  <td>TestNG-test=Test-1@21113744</td>   <td></td> </tr>
-<tr bgcolor="ac878f">  <td>22/01/22 22:31:47</td>   <td>-45222</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.sample()[pri:3, instance:com.livetest.HomePageTest@d7259e]">sample</td> 
-  <td>TestNG-test=Test-2@10929442</td>   <td></td> </tr>
-<tr bgcolor="b264a1">  <td>22/01/22 22:31:12</td>   <td>-80592</td> <td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setup()[pri:0, instance:com.livetest.LoginPageTest@1bf57b3]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@17740980</td>   <td></td> </tr>
-<tr bgcolor="b264a1">  <td>22/01/22 22:32:44</td>   <td>12004</td> <td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.livetest.LoginPageTest@1bf57b3]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@17740980</td>   <td></td> </tr>
+<tr bgcolor="b264a1">  <td>22/01/25 14:15:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPageloginTest(java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:com.livetest.LoginPageTest@1bf57b3]">LogoPageloginTest</td> 
+  <td>TestNG-test=Test-1@30974034</td>   <td></td> </tr>
+<tr bgcolor="b264a1">  <td>22/01/25 14:15:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPageloginTest(java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:com.livetest.LoginPageTest@1bf57b3]">LogoPageloginTest</td> 
+  <td>TestNG-test=Test-1@30974034</td>   <td></td> </tr>
+<tr bgcolor="b264a1">  <td>22/01/25 14:15:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPageloginTest(java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:com.livetest.LoginPageTest@1bf57b3]">LogoPageloginTest</td> 
+  <td>TestNG-test=Test-1@30974034</td>   <td></td> </tr>
+<tr bgcolor="b264a1">  <td>22/01/25 14:15:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPageloginTest(java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:com.livetest.LoginPageTest@1bf57b3]">LogoPageloginTest</td> 
+  <td>TestNG-test=Test-1@30974034</td>   <td></td> </tr>
+<tr bgcolor="b264a1">  <td>22/01/25 14:15:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPageloginTest(java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:com.livetest.LoginPageTest@1bf57b3]">LogoPageloginTest</td> 
+  <td>TestNG-test=Test-1@30974034</td>   <td></td> </tr>
+<tr bgcolor="b264a1">  <td>22/01/25 14:15:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPageloginTest(java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:com.livetest.LoginPageTest@1bf57b3]">LogoPageloginTest</td> 
+  <td>TestNG-test=Test-1@30974034</td>   <td></td> </tr>
+<tr bgcolor="b264a1">  <td>22/01/25 14:15:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPageloginTest(java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:com.livetest.LoginPageTest@1bf57b3]">LogoPageloginTest</td> 
+  <td>TestNG-test=Test-1@30974034</td>   <td></td> </tr>
+<tr bgcolor="b264a1">  <td>22/01/25 14:13:09</td>   <td>-129065</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPagelogoTest()[pri:0, instance:com.livetest.LoginPageTest@1bf57b3]">LogoPagelogoTest</td> 
+  <td>TestNG-test=Test-1@30974034</td>   <td></td> </tr>
+<tr bgcolor="b264a1">  <td>22/01/25 14:15:05</td>   <td>-12668</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setup()[pri:0, instance:com.livetest.LoginPageTest@1bf57b3]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-1@30974034</td>   <td></td> </tr>
+<tr bgcolor="b264a1">  <td>22/01/25 14:15:05</td>   <td>-12668</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setup()[pri:0, instance:com.livetest.LoginPageTest@1bf57b3]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-1@30974034</td>   <td></td> </tr>
+<tr bgcolor="b264a1">  <td>22/01/25 14:15:05</td>   <td>-12668</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setup()[pri:0, instance:com.livetest.LoginPageTest@1bf57b3]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-1@30974034</td>   <td></td> </tr>
+<tr bgcolor="b264a1">  <td>22/01/25 14:15:05</td>   <td>-12668</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setup()[pri:0, instance:com.livetest.LoginPageTest@1bf57b3]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-1@30974034</td>   <td></td> </tr>
+<tr bgcolor="b264a1">  <td>22/01/25 14:15:05</td>   <td>-12668</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setup()[pri:0, instance:com.livetest.LoginPageTest@1bf57b3]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-1@30974034</td>   <td></td> </tr>
+<tr bgcolor="b264a1">  <td>22/01/25 14:15:05</td>   <td>-12668</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setup()[pri:0, instance:com.livetest.LoginPageTest@1bf57b3]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-1@30974034</td>   <td></td> </tr>
+<tr bgcolor="ac878f">  <td>22/01/25 14:15:31</td>   <td>12758</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setup()[pri:0, instance:com.livetest.HomePageTest@27b02d]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-1@30974034</td>   <td></td> </tr>
+<tr bgcolor="b264a1">  <td>22/01/25 14:15:05</td>   <td>-12668</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setup()[pri:0, instance:com.livetest.LoginPageTest@1bf57b3]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-1@30974034</td>   <td></td> </tr>
+<tr bgcolor="b264a1">  <td>22/01/25 14:15:05</td>   <td>-12668</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setup()[pri:0, instance:com.livetest.LoginPageTest@1bf57b3]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-1@30974034</td>   <td></td> </tr>
+<tr bgcolor="b264a1">  <td>22/01/25 14:15:29</td>   <td>11277</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.livetest.LoginPageTest@1bf57b3]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-1@30974034</td>   <td></td> </tr>
+<tr bgcolor="b264a1">  <td>22/01/25 14:15:29</td>   <td>11277</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.livetest.LoginPageTest@1bf57b3]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-1@30974034</td>   <td></td> </tr>
+<tr bgcolor="b264a1">  <td>22/01/25 14:15:29</td>   <td>11277</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.livetest.LoginPageTest@1bf57b3]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-1@30974034</td>   <td></td> </tr>
+<tr bgcolor="ac878f">  <td>22/01/25 14:15:51</td>   <td>32580</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.livetest.HomePageTest@27b02d]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-1@30974034</td>   <td></td> </tr>
+<tr bgcolor="b264a1">  <td>22/01/25 14:15:29</td>   <td>11277</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.livetest.LoginPageTest@1bf57b3]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-1@30974034</td>   <td></td> </tr>
+<tr bgcolor="b264a1">  <td>22/01/25 14:15:29</td>   <td>11277</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.livetest.LoginPageTest@1bf57b3]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-1@30974034</td>   <td></td> </tr>
+<tr bgcolor="b264a1">  <td>22/01/25 14:15:29</td>   <td>11277</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.livetest.LoginPageTest@1bf57b3]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-1@30974034</td>   <td></td> </tr>
+<tr bgcolor="b264a1">  <td>22/01/25 14:15:29</td>   <td>11277</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.livetest.LoginPageTest@1bf57b3]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-1@30974034</td>   <td></td> </tr>
+<tr bgcolor="b264a1">  <td>22/01/25 14:15:29</td>   <td>11277</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.livetest.LoginPageTest@1bf57b3]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-1@30974034</td>   <td></td> </tr>
+<tr bgcolor="ac878f">  <td>22/01/25 14:15:49</td>   <td>31230</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.validateManagerIDTest()[pri:0, instance:com.livetest.HomePageTest@27b02d]">validateManagerIDTest</td> 
+  <td>TestNG-test=Test-1@30974034</td>   <td></td> </tr>
 </table>
