1.Commented the threadlocal code 2.Added code for accepting aa kinds of data from excel 3.Added code for delete customer page

--- a/LiveProject/test-output/old/Default suite/classes.html
+++ b/LiveProject/test-output/old/Default suite/classes.html
@@ -4,25 +4,25 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.livetest.LoginPageTest</td>
+<td>com.livetest.DeleteCusPageTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>LogoPageloginTest</td>
+<td>validateDeleteNotACustomerTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>LogoPagelogoTest</td>
+<td>messageDisplayedTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>setup</td>
+<td>freshup</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
@@ -35,6 +35,6 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>tearDown</td>
+<td>endup</td>
 <td>&nbsp;</td></tr>
 </table>
