--- a/LiveProject/test-output/old/Default suite/methods-alphabetical.html
+++ b/LiveProject/test-output/old/Default suite/methods-alphabetical.html
@@ -1,24 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8080bb">  <td>22/01/25 19:01:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPageloginTest(java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:com.livetest.LoginPageTest@b51256]">LogoPageloginTest</td> 
-  <td>main@17037394</td>   <td></td> </tr>
-<tr bgcolor="8080bb">  <td>22/01/25 19:01:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPageloginTest(java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:com.livetest.LoginPageTest@b51256]">LogoPageloginTest</td> 
-  <td>main@17037394</td>   <td></td> </tr>
-<tr bgcolor="8080bb">  <td>22/01/25 19:01:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPageloginTest(java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:com.livetest.LoginPageTest@b51256]">LogoPageloginTest</td> 
-  <td>main@17037394</td>   <td></td> </tr>
-<tr bgcolor="8080bb">  <td>22/01/25 19:01:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPageloginTest(java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:com.livetest.LoginPageTest@b51256]">LogoPageloginTest</td> 
-  <td>main@17037394</td>   <td></td> </tr>
-<tr bgcolor="8080bb">  <td>22/01/25 19:01:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPageloginTest(java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:com.livetest.LoginPageTest@b51256]">LogoPageloginTest</td> 
-  <td>main@17037394</td>   <td></td> </tr>
-<tr bgcolor="8080bb">  <td>22/01/25 19:01:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPageloginTest(java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:com.livetest.LoginPageTest@b51256]">LogoPageloginTest</td> 
-  <td>main@17037394</td>   <td></td> </tr>
-<tr bgcolor="8080bb">  <td>22/01/25 19:01:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPageloginTest(java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:com.livetest.LoginPageTest@b51256]">LogoPageloginTest</td> 
-  <td>main@17037394</td>   <td></td> </tr>
-<tr bgcolor="8080bb">  <td>22/01/25 18:58:33</td>   <td>-188934</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LogoPagelogoTest()[pri:0, instance:com.livetest.LoginPageTest@b51256]">LogoPagelogoTest</td> 
-  <td>main@17037394</td>   <td></td> </tr>
-<tr bgcolor="8080bb">  <td>22/01/25 18:57:55</td>   <td>-226909</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setup()[pri:0, instance:com.livetest.LoginPageTest@b51256]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@17037394</td>   <td></td> </tr>
-<tr bgcolor="8080bb">  <td>22/01/25 19:01:52</td>   <td>10318</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.livetest.LoginPageTest@b51256]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@17037394</td>   <td></td> </tr>
+<tr bgcolor="8080bb">  <td>22/01/27 22:59:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DeleteCusPageTest.endup()[pri:0, instance:com.livetest.DeleteCusPageTest@b51256]">&lt;&lt;endup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@27593292</td>   <td></td> </tr>
+<tr bgcolor="8080bb">  <td>22/01/27 22:57:55</td>   <td>-84239</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DeleteCusPageTest.freshup()[pri:0, instance:com.livetest.DeleteCusPageTest@b51256]">&gt;&gt;freshup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@27593292</td>   <td></td> </tr>
+<tr bgcolor="8080bb">  <td>22/01/27 22:58:29</td>   <td>-50034</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DeleteCusPageTest.messageDisplayedTest()[pri:0, instance:com.livetest.DeleteCusPageTest@b51256]">messageDisplayedTest</td> 
+  <td>main@27593292</td>   <td></td> </tr>
+<tr bgcolor="8080bb">  <td>22/01/27 22:59:13</td>   <td>-5564</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DeleteCusPageTest.validateDeleteNotACustomerTest(java.lang.String)[pri:0, instance:com.livetest.DeleteCusPageTest@b51256]">validateDeleteNotACustomerTest</td> 
+  <td>main@27593292</td>   <td></td> </tr>
+<tr bgcolor="8080bb">  <td>22/01/27 22:59:13</td>   <td>-5564</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DeleteCusPageTest.validateDeleteNotACustomerTest(java.lang.String)[pri:0, instance:com.livetest.DeleteCusPageTest@b51256]">validateDeleteNotACustomerTest</td> 
+  <td>main@27593292</td>   <td></td> </tr>
+<tr bgcolor="8080bb">  <td>22/01/27 22:59:13</td>   <td>-5564</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DeleteCusPageTest.validateDeleteNotACustomerTest(java.lang.String)[pri:0, instance:com.livetest.DeleteCusPageTest@b51256]">validateDeleteNotACustomerTest</td> 
+  <td>main@27593292</td>   <td></td> </tr>
+<tr bgcolor="8080bb">  <td>22/01/27 22:59:13</td>   <td>-5564</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DeleteCusPageTest.validateDeleteNotACustomerTest(java.lang.String)[pri:0, instance:com.livetest.DeleteCusPageTest@b51256]">validateDeleteNotACustomerTest</td> 
+  <td>main@27593292</td>   <td></td> </tr>
+<tr bgcolor="8080bb">  <td>22/01/27 22:59:13</td>   <td>-5564</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DeleteCusPageTest.validateDeleteNotACustomerTest(java.lang.String)[pri:0, instance:com.livetest.DeleteCusPageTest@b51256]">validateDeleteNotACustomerTest</td> 
+  <td>main@27593292</td>   <td></td> </tr>
+<tr bgcolor="8080bb">  <td>22/01/27 22:59:13</td>   <td>-5564</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DeleteCusPageTest.validateDeleteNotACustomerTest(java.lang.String)[pri:0, instance:com.livetest.DeleteCusPageTest@b51256]">validateDeleteNotACustomerTest</td> 
+  <td>main@27593292</td>   <td></td> </tr>
 </table>
